# arabic-pdf2ebook

./: .gitignore  README.ar.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/: approved-plan.md  session-context.md
.github/workflows/: ci.yml  release.yml
docs/: devices.md
packaging/: entry.py  pdf2ebook.spec
src/pdf2ebook/: __init__.py  book.py  cbz.py  cli.py  config.py  devices.py  fontkit.py  ocrmode.py  pdfio.py  pipeline.py  send.py  workdir.py
src/pdf2ebook/epub/: fixedlayout.py  opf.py  reflow.py  templates.py  zipwriter.py
src/pdf2ebook/fonts/cpfont/: Amiri_12.cpfont  Amiri_14.cpfont  Amiri_16.cpfont  Amiri_18.cpfont
src/pdf2ebook/ocr/: base.py  registry.py  surya_backend.py  tesseract_backend.py
src/pdf2ebook/preprocess/: __init__.py  ops.py  pipeline.py
src/pdf2ebook/textproc/: chapters.py  clean.py  dehyphen.py  headings.py  lists.py  markdownize.py  paragraphs.py  poetry.py  preshape.py  structure.py
src/pdf2ebook/webui/: app.py
src/pdf2ebook/webui/static/: index.html
tests/: conftest.py  test_cli.py  test_epub.py  test_markdownize.py  test_pdfio_geometry.py  test_poetry.py  test_preprocess.py  test_preshape.py  test_send.py  test_structure.py  test_textproc.py  test_workdir.py
