[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-pdf2ebook"
version = "0.1.3"
description = "Convert scanned Arabic PDF books into e-reader friendly EPUBs (OCR or optimized images)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "arabic-pdf2ebook contributors" }]
keywords = ["arabic", "pdf", "epub", "ocr", "ebook", "ereader", "rtl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Arabic",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]
dependencies = [
    "pypdfium2>=5,<6",
    "pytesseract>=0.3.13,<0.4",
    "opencv-contrib-python-headless>=4.10,<5",
    "numpy>=1.26",
    "Pillow>=10.4",
    "typer>=0.12",
    "rich>=13",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "arabic-reshaper>=3",
]

[project.optional-dependencies]
surya = ["surya-ocr>=0.17,<1"]
dev = ["pytest>=8", "ruff", "mypy"]

[project.scripts]
pdf2ebook = "pdf2ebook.cli:main"

[project.urls]
Homepage = "https://github.com/Blhota/arabic-pdf2ebook"
Issues = "https://github.com/Blhota/arabic-pdf2ebook/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdf2ebook = ["fonts/*.ttf", "fonts/*.txt", "fonts/cpfont/*.cpfont", "webui/static/*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
